# nbfc_system

./: .gitignore  README.md  basic.py  pyproject.toml
agentic/: __init__.py  config.yaml  meta_agent.py
agentic/base/: __init__.py  base_agent.py
agentic/checker_agents/: __init__.py  analyst_checker.py  resource_pooler_checker.py
agentic/maker_agents/: __init__.py  analyst.py  associate.py  resource_pooler.py  sector_specialist.py  senior.py
demos/: doc_understanding.py  excel.ipynb  file_type.py  google_search.py
extracted_sheets/: IRS.csv  Sheet2.csv  alm_ALM.csv  operations_Sheet1.csv  operations_Sheet3.csv  portfolio_cuts_Apr24.csv  portfolio_cuts_Aug24.csv  portfolio_cuts_Dec24.csv  portfolio_cuts_Feb24.csv  portfolio_cuts_Feb25.csv  portfolio_cuts_Jan24.csv  portfolio_cuts_Jan25.csv  portfolio_cuts_Jul24.csv  portfolio_cuts_Jun24.csv  portfolio_cuts_Mar24.csv  portfolio_cuts_Mar25.csv  portfolio_cuts_May24.csv  portfolio_cuts_Monthwise Consolidation.csv  portfolio_cuts_Nov24.csv  portfolio_cuts_Oct24.csv  portfolio_cuts_Sep24.csv  portfolio_cuts_Sheet1.csv  portfolio_cuts_Sheet2.csv  portfolio_cuts_Sheet3.csv
